[package]
name = "plotters-wasm"
version = "0.1.0"
authors = ["Krzysztof Biedroń <arkendil@gmail.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
plotters = "0.2.14"
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }
